compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/erasure/extensionProperties.kt
class G<T>

konst <T> G<T>.foo: Int
    <!CONFLICTING_JVM_DECLARATIONS!>get()<!> = 1

konst G<String>.foo: Int
    <!CONFLICTING_JVM_DECLARATIONS!>get()<!> = 1